--- a/frontend/stableuser/src/index.css
+++ b/frontend/stableuser/src/index.css
@@ -11,3 +11,7 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.main_logo{height: 200px;
+  width: 250px;
+}
