--- a/frontend/stableuser/src/style/App.css
+++ b/frontend/stableuser/src/style/App.css
@@ -1,11 +1,11 @@
 .App {
   text-align: center;
+ background-color: antiquewhite;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+
+
+
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
