add style to content and navbar

--- a/frontend/vite-project/src/style/__base.scss
+++ b/frontend/vite-project/src/style/__base.scss
@@ -8,20 +8,19 @@
     box-sizing: inherit;
 }
 
+
+
+
 html{
     font-size: 62,5%;
-    font-family: 'Rubik', sans-serif
+    font-family: 'Rubik', sans-serif;
 }
 
 body{
     box-sizing: border-box;
 }
 
-//colors
-$purple :rgb(58, 0, 59);
-$glacier: rgb(218, 237, 237);
-$mallow: rgb(142, 83, 137);
-$mallowHover:rgb(184, 125, 179);
-$glacierHover: rgb(51, 65, 65);
+
+
 
 //fonts
