--- a/frontend/vite-project/src/style/App.scss
+++ b/frontend/vite-project/src/style/App.scss
@@ -1,4 +1,5 @@
-@import '_base';
+@import '__base';
+@import '__colors';
 
 /*  #root {
   max-width: 1280px;
@@ -54,14 +55,25 @@
  NAVIGATION BAR
  */
 
+html {
+  background-color: $glacier;
+}
 
+$navbarHeight : 2rem;
+$navbarTopPadding : 1.3rem;
+$navbarRightPadding : 4rem;
+$navbarLeftPadding : 1rem;
 
+$contentPadding: $navbarTopPadding * 3;
 
 .navbar {
   overflow: hidden;
   background-color: $mallow;
-  padding: 2rem 4rem;
-  height: 2.5rem;
+  padding-top: $navbarTopPadding;
+  padding-left: $navbarLeftPadding ;
+  padding-right: $navbarRightPadding ;
+  padding-bottom: $navbarTopPadding;
+  height: $navbarHeight;
   position: fixed;
   top: 0;
   width: 100%;
@@ -87,14 +99,14 @@
         background-color: $mallowHover;
       }
 
-     
+
     }
 
     &__item {
       display: flex;
       justify-content: center;
       align-items: center;
-      font-size: 1.7rem;
+      font-size: 1.5rem;
       height: 100%;
 
 
@@ -105,6 +117,7 @@
         &:hover {
           background-color: $mallowHover;
         }
+
         & active {
           color: $mallowHover;
         }
@@ -112,13 +125,12 @@
 
     }
   }
-
 }
-
 
 
 .content {
   text-align: center;
-  margin-top: 5rem;
+  margin-top: $contentPadding;
   color: black;
+  position: relative;
 }
