--- a/frontend/vite-project/src/style/App.scss
+++ b/frontend/vite-project/src/style/App.scss
@@ -1,5 +1,6 @@
 @import '__base';
 @import '__colors';
+@import url("https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200");
 
 /*  #root {
   max-width: 1280px;
@@ -54,6 +55,8 @@
 
  NAVIGATION BAR
  */
+
+
 
 html {
   background-color: $glacier;
@@ -133,4 +136,20 @@ $contentPadding: $navbarTopPadding * 3;
   margin-top: $contentPadding;
   color: black;
   position: relative;
+}
+
+.flag-container{
+  display:inline-flex;
+  justify-content: space-between;
+  gap: 0.5rem;
+  float: right;
+  margin-right: 1rem;
+
+  img{
+    height: 1rem;
+
+   &:hover{
+    opacity: 30%;
+   }
+  }
 }
