--- a/frontend/vite-project/src/style/__colors.scss
+++ b/frontend/vite-project/src/style/__colors.scss
@@ -5,6 +5,8 @@ $purple :rgb(58, 0, 59);
 $mallow: rgb(142, 83, 137);
 $mallowHover:rgb(184, 125, 179);
 $glacierHover: rgb(51, 65, 65);
+$itemBackground: rgb(155, 94, 150);
+
 
 //main color
 $glacier: rgb(218, 237, 237);
